[package]
name = "webhouse-axum-blog"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
askama_axum = "0.4"
pulldown-cmark = "0.10"
once_cell = "1"
regex = "1"
